--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,17 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="background_color">@color/title_text_color_light</item>
+        <item name="title_text_color">@color/background_color_light</item>
+        <item name="subtitle_text_color">@color/sub_title_text_color_dark</item>
+        <item name="card_background">@color/black</item>
+        <item name="button_color">@color/button_color</item>
+        <item name="hint_color">@color/hint_color_dark</item>
+        <item name="button_color_dim">@color/button_color_dim</item>
+        <item name="button_text_color">@color/white</item>
+
+        <item name="tool_bar_color">@color/tool_bar_color_dark</item>
+        <item name="tool_bar_text_background_color">@color/tool_bar_color_dark_70</item>
     </style>
 </resources>
