--- a/app/src/main/res/layout/labour_list_recycler_view.xml
+++ b/app/src/main/res/layout/labour_list_recycler_view.xml
@@ -12,6 +12,10 @@
             name="viewModel"
             type="com.chillminds.local_construction.view_models.DashboardViewModel" />
 
+        <variable
+            name="showEdit"
+            type="boolean" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -58,6 +62,7 @@
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
             android:src="@drawable/ic_edit"
+            app:animateVisibility="@{showEdit}"
             android:onClick="@{()->viewModel.editLabourInfo(data)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
