--- a/app/src/main/res/layout/material_list_recycler_view.xml
+++ b/app/src/main/res/layout/material_list_recycler_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="data"
             type="com.chillminds.local_construction.repositories.remote.dto.MaterialData" />
@@ -12,13 +13,17 @@
             name="viewModel"
             type="com.chillminds.local_construction.view_models.DashboardViewModel" />
 
+        <variable
+            name="showEdit"
+            type="boolean" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/_2sdp"
         android:layout_marginHorizontal="@dimen/_5sdp"
+        android:layout_marginVertical="@dimen/_2sdp"
         android:background="?attr/card_background"
         android:padding="@dimen/_10sdp">
 
@@ -44,12 +49,12 @@
             android:layout_margin="@dimen/_5sdp"
             android:elegantTextHeight="true"
             android:letterSpacing="0.1"
-            android:textColor="?attr/title_text_color"
-            android:textStyle="bold"
             android:padding="@dimen/_2sdp"
             android:text="@{``+data.amount}"
-            app:layout_constraintHorizontal_bias="0"
+            android:textColor="?attr/title_text_color"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameTextView"
             tools:text="Zec 3:7" />
@@ -57,12 +62,13 @@
         <androidx.appcompat.widget.AppCompatImageButton
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/ic_edit"
+            android:background="@null"
             android:onClick="@{()->viewModel.editMaterial(data)}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_edit"
+            app:animateVisibility="@{showEdit}"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@null"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
