Splash screen Animation Fixes

--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -14,24 +14,35 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.fragments.SplashFragment">
+        tools:context=".views.fragments.SplashFragment"
+        android:background="@drawable/splash_background">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/appCompatImageView"
+            android:id="@+id/imageView6"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/construction" />
+            android:alpha="1"
+            android:background="@drawable/splash_background"
+            android:scaleType="center"
+            app:animateSrc="@{@drawable/construction}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:src="@drawable/construction" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_10sdp"
             android:gravity="center"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="italic"
+            android:textColor="?attr/title_text_color"
             android:text="@={viewModel.commonModel.splashMessage}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.85" />
+            app:layout_constraintVertical_bias="0.95"
+            tools:text="Hello World"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
