--- a/app/src/main/res/layout/stage_entry_view.xml
+++ b/app/src/main/res/layout/stage_entry_view.xml
@@ -14,6 +14,10 @@
             type="String" />
 
         <variable
+            name="isLastElement"
+            type="Boolean" />
+
+        <variable
             name="stageEntryRecordList"
             type="com.chillminds.local_construction.repositories.remote.dto.StageEntryRecordList" />
 
@@ -67,6 +71,7 @@
             tools:text="Sample" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
@@ -74,6 +79,12 @@
             app:lifeCycle="@{lifeCycle}"
             app:setStagesEntryChildAdapter="@{stageEntryRecordList.entryRecords}"
             app:stageDetails="@{stageDetails}" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_100sdp"
+            app:animateVisibility="@{isLastElement}"
+            app:layout_constraintTop_toBottomOf="@+id/recycler_view"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
