--- a/app/src/main/res/layout/project_list_recycler_view.xml
+++ b/app/src/main/res/layout/project_list_recycler_view.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_5sdp"
         android:layout_marginVertical="@dimen/_2sdp"
+        android:onClick="@{()->viewModel.onSelectSpecificProjectFromDashboard(data)}"
         android:background="?attr/card_background"
         android:padding="@dimen/_10sdp">
 
