--- a/app/src/main/res/layout/fragment_stage_entry_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_stage_entry_bottom_sheet.xml
@@ -81,8 +81,8 @@
             android:layout_height="@dimen/_40sdp"
             android:layout_margin="@dimen/_10sdp"
             android:text="@{viewModel.date}"
+            android:onClick="@{()->viewModel.onSelectDateToEntry()}"
             app:layout_constraintTop_toBottomOf="@+id/priceTextView" />
-
 
         <TextView
             android:id="@+id/totalPriceTextView"
