--- a/app/src/main/res/layout/project_list_recycler_view.xml
+++ b/app/src/main/res/layout/project_list_recycler_view.xml
@@ -41,6 +41,7 @@
             tools:text="Sample" />
 
         <TextView
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5sdp"
@@ -57,13 +58,25 @@
             tools:text="Zec 3:7" />
 
         <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/editButton"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/ic_edit"
+            android:background="@null"
             android:onClick="@{()->viewModel.editProjectData(data)}"
+            android:src="@drawable/ic_edit"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:src="@drawable/ic_delete"
+            android:layout_margin="@dimen/_10sdp"
+            android:onClick="@{()->viewModel.deleteProjectData(data)}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/editButton"
             android:background="@null"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
