--- a/app/src/main/res/layout/stage_entries_child_adapter.xml
+++ b/app/src/main/res/layout/stage_entries_child_adapter.xml
@@ -92,6 +92,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintBottom_toTopOf="@+id/bottomView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/countTextView"
             tools:text="Total Price - 1" />
@@ -104,7 +105,14 @@
             android:src="@drawable/ic_edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/dateTextView"/>
+
+        <View
+            android:id="@+id/bottomView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:background="?attr/background_color"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
