--- a/app/src/main/res/layout/stage_entries_child_adapter.xml
+++ b/app/src/main/res/layout/stage_entries_child_adapter.xml
@@ -81,6 +81,7 @@
             tools:text="Count - 1" />
 
         <TextView
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5sdp"
@@ -90,14 +91,15 @@
             android:text="@{`Total Price - `+data.totalPrice}"
             android:textColor="?attr/title_text_color"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/bottomView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintBottom_toTopOf="@+id/bottomView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/countTextView"
             tools:text="Total Price - 1" />
 
         <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/appCompatImageButton"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
             android:background="@null"
@@ -105,7 +107,18 @@
             android:src="@drawable/ic_edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dateTextView"/>
+            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:background="@null"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:onClick="@{()->viewModel.deleteStageEntryData(data,stageDetails)}"
+            android:src="@drawable/ic_delete"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
+            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
 
         <View
             android:id="@+id/bottomView"
