--- a/app/src/main/res/layout/fragment_dashboard_statistics.xml
+++ b/app/src/main/res/layout/fragment_dashboard_statistics.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,28 +15,44 @@
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".views.fragments.dashboard.DashboardStatisticsFragment">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_25sdp"
+            android:elegantTextHeight="true"
+            android:letterSpacing="0.2"
+            android:lineSpacingExtra="@dimen/_5sdp"
+            android:padding="@dimen/_2sdp"
+            android:text="Sort By"
+            android:textColor="?attr/title_text_color"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/dashboardSpinner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/dashboardSpinner" />
 
         <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/dashboardSpinner"
             android:layout_width="@dimen/_200sdp"
             android:layout_height="@dimen/_40sdp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginVertical="@dimen/_3sdp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginVertical="@dimen/_3sdp" />
+            app:layout_constraintStart_toEndOf="@+id/textView5"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
+            android:id="@+id/view2"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
             android:background="?attr/background_color"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dashboardSpinner"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/dashboardSpinner" />
 
         <TextView
             android:id="@+id/nameTextView"
@@ -56,10 +74,10 @@
         <TextView
             android:id="@+id/textView"
             android:layout_width="@dimen/_80sdp"
-            android:gravity="center"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5sdp"
             android:elegantTextHeight="true"
+            android:gravity="center"
             android:letterSpacing="0.1"
             android:padding="@dimen/_2sdp"
             android:text="Price"
@@ -71,39 +89,51 @@
             tools:text="Zec 3:7" />
 
         <TextView
+            android:id="@+id/textView4"
             android:layout_width="@dimen/_60sdp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Count"
             android:textColor="?attr/subtitle_text_color"
             android:textSize="@dimen/_14sdp"
             android:textStyle="bold"
-            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
             app:layout_constraintEnd_toStartOf="@+id/textView"
             app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintStart_toEndOf="@+id/nameTextView"
-            app:layout_constraintTop_toTopOf="@+id/nameTextView"
-            />
+            app:layout_constraintTop_toTopOf="@+id/nameTextView" />
 
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
-            android:background="?attr/background_color"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="@dimen/_5sdp"
-            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:background="?attr/background_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@+id/view"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constrainedHeight="true"
             android:layout_marginVertical="@dimen/_3sdp"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintBottom_toTopOf="@+id/exportButton"
+            app:layout_constraintTop_toBottomOf="@+id/view"
             app:lifeCycle="@{lifeCycle}"
-            app:setupDashboardInformation="@{viewModel.commonModel.projectList}" />
+            app:setupDashboardInformation="@{viewModel.commonModel.projectList}"
+            app:sortByPosition="@{viewModel.spinnerSelectedPosition}" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/exportButton"
+            style="@style/button_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Export as PDF"
+            android:onClick="@{()->viewModel.exportPdfFromProjectDashboard()}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
