--- a/app/src/main/res/layout/stage_entries_child_adapter.xml
+++ b/app/src/main/res/layout/stage_entries_child_adapter.xml
@@ -29,6 +29,7 @@
         android:layout_marginHorizontal="@dimen/_5sdp"
         android:layout_marginVertical="@dimen/_2sdp"
         android:background="?attr/card_background"
+        android:onClick="@{()->viewModel.showStageEntryChildOptionsDeleteSheet(data,stageDetails)}"
         android:padding="@dimen/_10sdp">
 
         <TextView
@@ -98,7 +99,7 @@
             app:layout_constraintTop_toBottomOf="@+id/countTextView"
             tools:text="Total Price - 1" />
 
-        <androidx.appcompat.widget.AppCompatImageButton
+        <!--<androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/appCompatImageButton"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
@@ -114,11 +115,11 @@
             android:layout_height="@dimen/_30sdp"
             android:background="@null"
             android:layout_marginEnd="@dimen/_10sdp"
-            android:onClick="@{()->viewModel.deleteStageEntryData(data,stageDetails)}"
+            android:onClick="@{()->viewModel.deleteStageEntryData()}"
             android:src="@drawable/ic_delete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
-            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />-->
 
         <View
             android:id="@+id/bottomView"
