--- a/app/src/main/res/layout/dashboard_list_recycler_view.xml
+++ b/app/src/main/res/layout/dashboard_list_recycler_view.xml
@@ -25,6 +25,7 @@
         android:layout_marginHorizontal="@dimen/_2sdp"
         android:layout_marginVertical="@dimen/_2sdp"
         android:background="?attr/card_background"
+        android:onClick="@{()->viewModel.showDashboardEntryExpansion(data)}"
         android:padding="@dimen/_10sdp">
 
         <TextView
